<resources>
    <string name="app_name">YS Weather App</string>
    <string name="enter_location">Enter location</string>
    <string name="loading">loading</string>
    <string name="ys_weather_app">YS Weather App</string>
    <string name="humidity">Humidity:</string>
    <string name="zero">0</string>
    <string name="weather_forecast">Weather ForeCast</string>
    <string name="temp_c">°C</string>
    <string name="fs">/</string>
    <string name="temp_f">F</string>
    <string name="weather_icon">weather icon</string>
    <string name="search_icon">search icon</string>
</resources>